; ModuleID = '/home/carl/AnghaBench/proxychains-ng/tests/extr_test_v4_in_v6.c_v4_to_v6.c'
source_filename = "/home/carl/AnghaBench/proxychains-ng/tests/extr_test_v4_in_v6.c_v4_to_v6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }
%struct.in6_addr = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.in_addr*, %struct.in6_addr*)* @v4_to_v6 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @v4_to_v6(%struct.in_addr* %0, %struct.in6_addr* %1) #0 {
  %3 = alloca %struct.in_addr*, align 8
  %4 = alloca %struct.in6_addr*, align 8
  store %struct.in_addr* %0, %struct.in_addr** %3, align 8
  store %struct.in6_addr* %1, %struct.in6_addr** %4, align 8
  %5 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %6 = call i32 @memset(%struct.in6_addr* %5, i32 0, i32 8)
  %7 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %8 = getelementptr inbounds %struct.in6_addr, %struct.in6_addr* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 10
  store i32 255, i32* %10, align 4
  %11 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %12 = getelementptr inbounds %struct.in6_addr, %struct.in6_addr* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 11
  store i32 255, i32* %14, align 4
  %15 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %16 = getelementptr inbounds %struct.in6_addr, %struct.in6_addr* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 12
  %19 = load %struct.in_addr*, %struct.in_addr** %3, align 8
  %20 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %19, i32 0, i32 0
  %21 = call i32 @memcpy(i32* %18, i32* %20, i32 4)
  ret void
}

declare dso_local i32 @memset(%struct.in6_addr*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
